# DEM-Engine

./: .format_all  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  LICENSE.md  MANIFEST.in  MESH_TEMPLATE_USAGE.md  PATCH_LOCATION_IMPLEMENTATION.md  PYTHON_BUILD.md  README.md  TYPED_WILDCARDS.md  packaging_instructions.txt  post_Flow.asv  post_Flow.m  post_Repose.asv  post_Repose.m  pyproject.toml  setup.py  test_mesh_template.cpp  wheel_slip.sh  wheel_slip_6.sh
src/DEM/: API.cpp  API.h  APIPrivate.cpp  APIPublic.cpp  ApiSystem.cpp  ApiSystem.h  AuxClasses.cpp  AuxClasses.h  BdrsAndObjs.cpp  BdrsAndObjs.h  Boundaries.h  CMakeLists.txt  DEMAuxClasses.cpp  DEMAuxClasses.h  DEMBdrsAndObjs.h  DEMDefines.h  DEMModels.h  DEMStructs.h  Defines.cpp  Defines.h  HostSideHelpers.cpp  HostSideHelpers.hpp  MeshUtils.cpp  Models.h  PyDEME.cpp  Structs.cpp  Structs.h  VariableTypes.h  dT.cpp  dT.h  kT.cpp  kT.h
src/DEM/python/: bindings.cpp
src/DEM/utils/: HostSideHelpers.hpp  Samplers.cpp  Samplers.hpp
src/algorithms/: CMakeLists.txt  DEMAnalyticalBoundaryConstants.cu  DEMAnalyticalBoundaryConstants.cuh  DEMBinSphereKernels.cu  DEMBinTriangleKernels.cu  DEMCalcForceKernels.cu  DEMCollectForceKernels.cu  DEMContactDetection.cu  DEMContactDetectionKernels.cuh  DEMCubBasedSubroutines.h  DEMCubContactDetection.cu  DEMCubForceCollection.cu  DEMCubHelperFunctions.h  DEMCubInstantiations.cu  DEMCubUtilities.cu  DEMCubWrappers.cu  DEMCudaUtilities.cu  DEMDynamicMisc.cu  DEMKinematicMisc.cu  DEMMiscKernels.cu  DEMStaticDeviceSubroutines.h  DEMStaticDeviceUtilities.cuh  SPHCubHelperFunctions.cu  SPHCubHelperFunctions.h  example.cu
src/core/: ApiVersion.h.in  CMakeLists.txt  DebugInfo.cpp
src/core/utils/: BaseClasses.hpp  CpuAlgorithmHelper.cpp  CpuAlgorithmHelper.h  CudaAllocator.hpp  DEMEPaths.cpp  DEMEPaths.h  DataMigrationHelper.hpp  GpuError.h  GpuManager.cpp  GpuManager.h  HeaderGenerator.h  JitHelper.cpp  JitHelper.h  Logger.hpp  Macros.h  ManagedAllocator.hpp  ManagedMemory.hpp  Paths.hpp  RuntimeData.cpp.in  RuntimeData.h  ThreadManager.h  Timer.hpp  WavefrontMeshLoader.hpp  csv.hpp
src/demo/: CMakeLists.txt  CMakeLists_test.txt  DEMDemo_mooringLine.cpp  DEMdemo_BallDrop.cpp  DEMdemo_BallDrop2D.cpp  DEMdemo_BallDropPolydisperse.cpp  DEMdemo_BoxesFalling.cpp  DEMdemo_BulkCollide.cpp  DEMdemo_Centrifuge.cpp  DEMdemo_Collide.cpp  DEMdemo_ConePenetration.cpp  DEMdemo_ContactChain.cpp  DEMdemo_ContactChain_big.cpp  DEMdemo_Drum.cpp  DEMdemo_DrumCubes.cpp  DEMdemo_Electrostatic.cpp  DEMdemo_FillingGeo.cpp  DEMdemo_FlexibleFall.cpp  DEMdemo_FlexibleMesh.cpp  DEMdemo_FlexibleNet.cpp  DEMdemo_Force2D.cpp  DEMdemo_Force3D.cpp  DEMdemo_Force3DSingle.cpp  DEMdemo_Fracture.cpp  DEMdemo_FractureBeam.cpp  DEMdemo_FractureBox.cpp  DEMdemo_FractureCylinderSteel.cpp  DEMdemo_Fracture_Box.cpp  DEMdemo_GRCPrep.cpp  DEMdemo_GRCPrep_Part1.cpp  DEMdemo_GRCPrep_Part1_Large.cpp  DEMdemo_GRCPrep_Part1_Small.cpp  DEMdemo_GRCPrep_Part2.cpp  DEMdemo_GRCPrep_Part2_Large.cpp  DEMdemo_GRCPrep_Part2_Small.cpp  DEMdemo_GRCPrep_Part3.cpp  DEMdemo_GRCPrep_Part3_Large.cpp  DEMdemo_GRCPrep_Part3_Small.cpp  DEMdemo_GameOfLife.cpp  DEMdemo_Granular_Flow.cpp  (+102 more)
src/demo/DemoOutput_WheelDPSimplified/: DEMdemo_mesh_0000.vtk  DEMdemo_mesh_0001.vtk  DEMdemo_output_0000.csv  DEMdemo_output_0001.csv
src/demo/ModularTests/: CMakeLists.txt  DEMTest_ConeGrazingPlane.cpp  DEMTest_ConeGrazingSphere.cpp  DEMTest_CylinderCrossRotation.cpp  DEMTest_MeshPatch.cpp  DEMTest_MeshSlidingOnSlope.cpp  DEMTest_MeshTemplate.cpp  DEMTest_PatchLocations.cpp  DEMTest_PersistentContact.cpp  DEMTest_SimpleCollisions.cpp  DEMTest_SpherePlanePeneArea.cpp  DEMTest_SphereSphereArea.cpp
src/demo/SampleSbatchScripts/: BD.sh  CP.sh  Cen.sh  Drum.sh  FM.sh  Ind.sh  Mixer.sh  P1.sh  RP.sh  SS.sh  Shake.sh  Sieve.sh  TestPack.sh  WDP.sh  WSS.sh  elec.sh
src/granular/: ApiSystem.cpp  ApiSystem.h  Boundaries.h  CMakeLists.txt  DataStructs.h  GranularDefines.h  GranularStructs.h  HostSideHelpers.cpp  HostSideHelpers.hpp  PhysicsSystem.cpp  PhysicsSystem.cu  PhysicsSystem.h  dT.cpp  dT.h  kT.cpp  kT.h
src/kernel/: CMakeLists.txt  CUDAMathHelpers.cu  CUDAMathHelpers.cuh  DEMBinSphereKernels.cu  DEMBinTriangleKernels.cu  DEMCalcForceKernels.cu  DEMCalcForceKernels_PatchBased.cu  DEMCalcForceKernels_Primitive.cu  DEMCollectForceKernels.cu  DEMCollectForceKernels_Compact.cu  DEMCollisionKernels.cu  DEMCollisionKernels.cuh  DEMCollisionKernels_SphSph.cuh  DEMCollisionKernels_SphTri_TriTri.cuh  DEMContactKernels.cu  DEMContactKernels_BigBlock.cu  DEMContactKernels_Blockwise.cu  DEMContactKernels_SphTri_TriTri.cu  DEMContactKernels_SphereSphere.cu  DEMContactKernels_SphereTriangle.cu  DEMForceKernels.cu  DEMFrictionalForceKernels.cu  DEMFrictionlessForceKernels.cu  DEMHelperKernels.cu  DEMHelperKernels.cuh  DEMHistoryBasedForceKernels.cu  DEMHistoryMappingKernels.cu  DEMHistorylessForceKernels.cu  DEMIntegrationKernels.cu  DEMKinematicMisc.cu  DEMMiscKernels.cu  DEMModeratorKernels.cu  DEMOwnerQueryKernels.cu  DEMPatchVotingKernels.cu  DEMPrepForceKernels.cu  DEMPrescribedIntegrationKernels.cu  DEMQuarryKernels.cu  DEMQueryKernels.cu  DEMSphereQueryKernels.cu  DEMTriangleBoxIntersect.cu  (+9 more)
src/kernel/DEMCustomizablePolicies/: AnalyticalCompDefJitify.cu  ClumpCompAcqStratAllFlatten.cu  ClumpCompAcqStratAllJitify.cu  ClumpCompAcqStratPartialJitify.cu  ClumpCompDefJitify.cu  ContactInfoWriteBack.cu  ForceCalcStrategy.cu  ForceInKernelReductionStrat.cu  FrictionlessHertzianForceModel.cu  FullHertzianForceModel.cu  IntegrationVelPassOnCenteredDiff.cu  IntegrationVelPassOnExtendedTaylor.cu  IntegrationVelPassOnForwardEuler.cu  MOIAcqStratFlatten.cu  MOIAcqStratJitify.cu  MOIDefJitify.cu  MassAcqStratFlatten.cu  MassAcqStratJitify.cu  MassDefJitify.cu  MaterialDefJitify.cu
src/kernel/DEMUserScripts/: ForceModel2D.cu  ForceModelMooring.cu  (+9 more)
src/sph/: CMakeLists.txt  SPHSystem.cpp  SPHSystem.cu  SPHSystem.cuh  SPHSystem.h  datastruct.cuh  datastruct.h  interactionManager.h
(+90 files in other folders)
